[gd_scene load_steps=5 format=3 uid="uid://d144nwq6aeww3"]

[ext_resource type="Script" path="res://Hud/hud.gd" id="1_jjdjr"]
[ext_resource type="Texture2D" uid="uid://0coqqbdrpuji" path="res://Assets/hearts_hud.png" id="2_x7h0x"]
[ext_resource type="Texture2D" uid="uid://csp5lek4j3bkt" path="res://Assets/covertura.png" id="3_852dg"]
[ext_resource type="Texture2D" uid="uid://bp4kf4ygqcdsy" path="res://Assets/progress.png" id="4_tekbn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_jjdjr")

[node name="HeartsContainer" type="HBoxContainer" parent="."]
offset_right = 175.0
offset_bottom = 49.0

[node name="Heart1" type="TextureRect" parent="HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_x7h0x")
expand_mode = 3

[node name="Heart2" type="TextureRect" parent="HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_x7h0x")
expand_mode = 3

[node name="Heart3" type="TextureRect" parent="HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_x7h0x")
expand_mode = 3

[node name="Heart4" type="TextureRect" parent="HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_x7h0x")
expand_mode = 3

[node name="Heart5" type="TextureRect" parent="HeartsContainer"]
layout_mode = 2
texture = ExtResource("2_x7h0x")
expand_mode = 3

[node name="DistanceBar" type="TextureProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -271.0
offset_right = 239.67
offset_bottom = 67.0
grow_horizontal = 2
texture_under = ExtResource("3_852dg")
texture_progress = ExtResource("4_tekbn")
texture_progress_offset = Vector2(65, 19)

[node name="DeathMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="DeathMenu"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 26.0

[node name="RetryButton" type="Button" parent="DeathMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="MainMenuButton" type="Button" parent="DeathMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="CheckpointButton" type="Button" parent="DeathMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
